# bevy_asset_preprocess

./: Cargo.toml  README.md  prek.toml
src/: lib.rs  main.rs
