[package]
name = "bevy_asset_preprocess"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Headless CLI/library for pre-processing Bevy assets (compressed textures + mipmaps via CompressedImageSaver) outside a running App"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pavlov-net/bevy_asset_preprocess"
keywords = ["bevy", "asset", "ktx2", "texture", "compression"]
categories = ["game-development", "command-line-utilities"]
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "bevy-asset-preprocess"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# CLI-only deps (walkdir for tree traversal, env_logger so the bin
# emits Bevy's tracing output to stderr). Library consumers building
# on top of `preprocess()` opt out via `default-features = false`.
cli = ["dep:walkdir"]

[dependencies]
# bevy_image carries the `compressed_image_saver` saver added in
# bevyengine/bevy#23567 (CTT backend, BCn/ASTC + auto mipmaps + zstd
# → KTX2). bevy_asset gives us `save_using_saver` and the asset
# source machinery; bevy_app + bevy_log are the minimal shell.
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_asset",
    "asset_processor",
    "bevy_log",
    # `multi_threaded` puts both the `IoTaskPool` and `bevy_asset`'s
    # `FileAssetReader` on real OS threads (vs. busy-spinning the
    # local executor on the main thread). Bake throughput on a real
    # asset tree is encoder-bound, but loads + saves still parallelize
    # across the pool — important for large game asset libraries.
    "multi_threaded",
    "jpeg",
    "png",
    "ktx2",
    "zstd_rust",
    "compressed_image_saver",
    # Needed so loader names in source `.meta` files resolve at bake time.
    # See run_bake_app in src/lib.rs.
    "bevy_gltf",
] }

# Same purpose as the loader features above: source `.meta` files
# reference `bevy_seedling::sample::assets::SampleLoader`, so the
# processor needs that loader registered. SeedlingPlugin opens a cpal
# audio stream during PostStartup (that's when SampleLoader gets its
# sample_rate and is registered with the AssetServer); there's no
# lighter-weight registration path exposed by seedling today.
bevy_seedling = { git = "https://github.com/CorvusPrudens/bevy_seedling", branch = "bevy-0.19", default-features = false, features = [
    "ogg",
] }

walkdir = { version = "2", optional = true }

# bevy_seedling depends on `bevy_app = "^0.19.0-dev"` etc., which only
# resolve via git. Cargo only honors `[patch]` from the workspace root,
# so consuming seedling as a git dep means we re-state every transitive
# bevy_* sub-crate it touches. Plus the firewheel fork: seedling's
# `bevy-0.19` branch needs `firewheel = { features = ["glam-32"] }` and
# the `glam-32` feature only lives in Chris Biscardi's fork (Firewheel
# PR #106) until it lands upstream.
[patch.crates-io]
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_asset = { git = "https://github.com/bevyengine/bevy" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_log = { git = "https://github.com/bevyengine/bevy" }
bevy_macro_utils = { git = "https://github.com/bevyengine/bevy" }
bevy_math = { git = "https://github.com/bevyengine/bevy" }
bevy_platform = { git = "https://github.com/bevyengine/bevy" }
bevy_ptr = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy" }
bevy_time = { git = "https://github.com/bevyengine/bevy" }
bevy_transform = { git = "https://github.com/bevyengine/bevy" }
bevy_utils = { git = "https://github.com/bevyengine/bevy" }
firewheel = { git = "https://github.com/ChristopherBiscardi/Firewheel", branch = "chris-0.19" }
